# OOP_Project

./: .gitignore  Antrenament.cpp  Antrenament.h  Button.cpp  Button.h  CMakeLists.txt  CMakeListsGI.txt  Erori_exercitiu.cpp  Erori_exercitiu.h  Exercitiu.cpp  Exercitiu.h  Exercitiu_factory.h  Fereastra.cpp  Fereastra.h  Fereastra_1.cpp  Fereastra_1.h  Fereastra_2.cpp  Fereastra_2.h  Fereastra_3.cpp  Fereastra_3.h  Fereastra_4.cpp  Fereastra_4.h  Fereastra_impl.cpp  First_commit.cpp  MET.in  Meniu.cpp  Meniu.h  NivelActivitateFizica.in  Nutritie.cpp  Nutritie.h  Nutritie_impl.cpp  README.md  Tipuri_Exercitii.cpp  Tipuri_Exercitii.h  Utilizator.cpp  Utilizator.h  main.cpp
.github/workflows/: main.yml
